# SimpleGeometricExpertSystem

./: CMakeLists.txt  README.md
.cache/clangd/index/: Engine.cpp.60F0F5F583F09144.idx  Engine.h.250040334D18EF0C.idx  Frame.cpp.BC892A3C33B6E9ED.idx  Frame.h.CBA1E5B7B443E1B1.idx  Handler.cpp.D7444B0AB7403ECB.idx  Handler.h.3031F8D978B83386.idx  MainWindow.cpp.E86B36CEF51C5E8E.idx  MainWindow.h.1FEDE727F047D7C1.idx  Rule.cpp.BFAA017CA9C06D9E.idx  Rule.h.EE556A9328AE6966.idx  RuleEdit.cpp.664C371C8B144277.idx  RuleEdit.h.C42DEC51B598E697.idx  main.cpp.EC77206D48BEEA5E.idx
code/include/: Engine.h  Frame.h  Handler.h  ItemShape.h  MainWindow.h  Rule.h  RuleEdit.h
code/source/: Engine.cpp  Frame.cpp  Handler.cpp  ItemShap.cpp  MainWindow.cpp  Rule.cpp  RuleEdit.cpp  main.cpp
facts/: facts.txt
